--- a/trunk/index.html
+++ b/trunk/index.html
@@ -16,7 +16,7 @@ number of bugs and regressions, as well as improving functionality.</p>
 <h4>SUPPORTWARE</h4>
 The development and maintenance of&nbsp; HyperSQL has been possible
 because of financial contributions by business users. We need renewed
-contributions. Please subscribe to SupporWare at&nbsp; <a href="http://hsqldb.org/web/supportware">http://hsqldb.org/web/supportware</a>
+contributions. Please subscribe to SupportWare at&nbsp; <a href="http://hsqldb.org/web/supportware">http://hsqldb.org/web/supportware</a>
 . Especially if you include HSQLDB as part of an applications that you sell, you are expected to subscribe to SupportWare at the appropriate level.
 <h4>PACKAGE CONTENTS</h4>
 <p>This download contains the
