--- a/trunk/index.html
+++ b/trunk/index.html
@@ -5,19 +5,23 @@
 <img style="width: 223px; height: 47px;" alt="HyperSQL logo" src="doc-src/images/hypersql_logo.png">
 <h3><br>
 </h3>
-<h3>HyperSQL version 2.3.2 Distribution</h3>
+<h3>HyperSQL version 2.3.3 Distribution</h3>
 <p>HSQLDB (HyperSQL DataBase) is a relational
-database engine written in Java. Version 2.3.x is the result of over 7 years
+database engine written in Java. Version 2.3.3 is the result of 9 years
 development since version 1.8.0. It offers many features and
 adheres closely to the latest SQL and JDBC 4 standards.</p>
 <p>This is a point release of version 2.3.
 This release should be used in preference to earlier 2.x releases, as it fixes a 
 number of bugs and regressions, as well as improving functionality.</p>
 <h4>SUPPORTWARE</h4>
-The development and maintenance of&nbsp; HyperSQL has been possible
+<p>The development and maintenance of&nbsp; HyperSQL has been possible
 because of financial contributions by business users. We need renewed
 contributions. Please subscribe to SupportWare at&nbsp; <a href="http://hsqldb.org/web/supportware">http://hsqldb.org/web/supportware</a>
-. Especially if you include HSQLDB as part of an applications that you sell, you are expected to subscribe to SupportWare at the appropriate level.
+. Especially if you include HSQLDB as part of an applications that you sell,
+or use it in production, you are expected to subscribe to SupportWare at the appropriate level. Subscribers get priority for support and feature request.</p>
+<h4>COMMERCIAL SUPPORT</h4>
+<p>Hourly paid support for HyperSQL is available
+from <a href="http://hxsql.com">http://hxsql.com</a>. This service provides all the help needed to use or integrate HSQLDB with your application.</p>
 <h4>PACKAGE CONTENTS</h4>
 <p>This download contains the
 following files and directories: </p>
@@ -88,14 +92,16 @@ key. A primary key must be declared explicitly.</li>
 other properties to some extent.</li>
 </ul>
 <h4>UPDATES</h4>
-We constantly fix reported issues. Please check the web site regularly
-for&nbsp;latest updated version and latest information.
-<h4>SUPPORT</h4>
-<p>Support for HyperSQL is available
+<p>We constantly fix reported issues. Please check the web site regularly
+for&nbsp;latest updated version and latest information.</p>
+<h4>RESOURCES</h4>
+<p>Support documentation for HyperSQL including the FAQ and links to resources is available
 from <a href="http://hsqldb.org/support">http://hsqldb.org/support</a>
-in various forms, including a mailing list and user forums. The web site
-features the latest bugfix versions of the software, FAQ and other useful
-resources.</p>
+in various forms, including user forums. Support is given to open source developers for using HSQLDB in their products.</p>
+
+<h4>NOTE</h4>
+The highly configurable java source code formatter <a href="http://jindent.com">Jindent</a> is used to format the HSQLDB source code.
+
 <p>Fred Toussi (fredt (at)
 users.sourceforge.net)<br>
 Blaine Simpson (blaine dot simpson (at) admc dot com)</p>
