--- a/trunk/index.html
+++ b/trunk/index.html
@@ -21,7 +21,10 @@ contributions. Please subscribe to SupportWare at&nbsp; <a href="http://hsqldb.o
 or use it in production, you are expected to subscribe to SupportWare at the appropriate level. Subscribers get priority for support and feature request.</p>
 <h4>COMMERCIAL SUPPORT</h4>
 <p>Hourly paid support for HyperSQL is available
-from <a href="http://hxsql.com">http://hxsql.com</a>. This service provides all the help needed to use or integrate HSQLDB with your application.</p>
+from <a href="http://hyperxtreme.co.uk/services.html">http://hyperxtreme.co.uk</a>. This service provides all the help needed to use or integrate HSQLDB with your application.</p>
+<h4>UPGRADES</h4>
+<p>For applications that require more speed with very large data sets, or need to store more data in a memory database, the commercial product HyperXtremeSQL is available
+from <a href="http://hxsql.com">http://hyperxtreme.co.uk</a>. This product is fully compatible with HSQLDB queries and other statements.</p>
 <h4>PACKAGE CONTENTS</h4>
 <p>This download contains the
 following files and directories: </p>
@@ -80,6 +83,7 @@ utilities
 for the engine and SqlTool</p>
 <h4>CHANGES</h4>
 <ul>
+<li>Versions 2.x have evolved over four years. This version is the most stable and bug-free version in the 2.x series.</li>
 <li>Compared to version 1.8, there are many new features and changes. Most
 of these do not affect existing features in version 1.8.x.</li>
 <li>Differences are detailed in the Guide. The main differences
