--- a/trunk/doc-src/index.html
+++ b/trunk/doc-src/index.html
@@ -7,8 +7,8 @@
 <body>
 <h3>HyperSQL version 2.3.3 Documentation</h3>
 <p>HSQLDB (HyperSQL Database) is a relational database engine
-written in Java. Version 2.3.3 is the result of over 8 years development
-since the last major version, 1.8.0. It offers many features and adheres
+written in Java. Version 2.3.3 is the result of over 5 years development
+since version, 2.0. It offers many features and adheres
 closely to the latest SQL and JDBC 4 standards.</p>
 <div class="section_title"> </div>
 <p>A set of HTML, PDF and text documents covering different
