--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 <img style="width: 223px; height: 47px;" alt="HyperSQL logo" src="doc-src/images/hypersql_logo.png">
 <h3><br>
 </h3>
-<h3>HyperSQL version 2.3.3 Distribution</h3>
+<h3>HyperSQL version 2.3.4 Distribution</h3>
 <p>HSQLDB (HyperSQL Database) is a relational
-database management system written in Java. Now in its 15th year, the latest version 2.3.3 is the result of 10 years development since version 1.8.0 and 5 years
+database management system written in Java. Now in its 16th year, the latest version 2.3.3 is the result of 10 years development since version 1.8.0 and 6 years
 improvements over version 2.0. It offers many features and
 adheres closely to the latest SQL and JDBC 4 standards.</p>
-<p>This is a point release of version 2.3.
-This release should be used in preference to earlier 2.x releases, as it fixes a 
+<p>This release should be used in preference to earlier 2.x releases, as it fixes a 
 number of bugs and regressions, as well as improving functionality and adding new features.</p>
 <h4>SUPPORTWARE</h4>
 <p>The development and maintenance of&nbsp; HyperSQL has been possible
@@ -68,9 +67,9 @@ is for the few sources that contain code from the closed HypersonicSQL project.<
 <h4>lib</h4>
 <p>The jar needed for running HyperSQL
 and its GUI utilities (hsqldb.jar) has been pre-built in this
-directory. The jar is
-compatible with Java version 1.6. The jar for SqlTool (sqltool.jar) is
-also in this directory. The extra zip file in the directory is needed
+directory. The jar for SqlTool (sqltool.jar) is
+also in this directory. The jars are
+compatible with Java version 1.6 and above. The extra zip file in the directory is needed
 only for
 recompiling hsqldb and is not required for deployment.</p>
 <h4>src</h4>
@@ -83,7 +82,7 @@ utilities
 for the engine and SqlTool</p>
 <h4>CHANGES</h4>
 <ul>
-<li>Versions 2.x have evolved over five years since 2010. This version is the most stable and bug-free version in the 2.x series.</li>
+<li>Versions 2.x have evolved over six years since 2010. This version is the most stable and bug-free version in the 2.x series.</li>
 <li>Compared to version 1.8, there are many new features and changes. Most
 of these do not affect compatibility with version 1.8.x.</li>
 <li>Differences are detailed in the Guide. The main differences
