--- a/trunk/doc-src/index.html
+++ b/trunk/doc-src/index.html
@@ -7,7 +7,7 @@
 <body>
 <h3>HyperSQL version 2.3.4 Documentation</h3>
 <p>HSQLDB (HyperSQL Database) is a relational database engine
-written in Java. Version 2.3.4 is the result of over 5 years development
+written in Java. Version 2.3.4 is the result of 6 years development
 since version 2.0. It offers many features and adheres
 closely to the latest SQL and JDBC 4 standards.</p>
 <div class="section_title"> </div>
