--- a/doc-src/index.html
+++ b/doc-src/index.html
@@ -5,11 +5,11 @@
 </head>
 
 <body>
-<h3>HyperSQL version 2.3.4 Documentation</h3>
+<h3>HyperSQL version 2.4.0 Documentation</h3>
 <p>HSQLDB (HyperSQL Database) is a relational database engine
-written in Java. Version 2.3.4 is the result of 6 years development
+written in Java. Version 2.4.0 is the result of 7 years development
 since version 2.0. It offers many features and adheres
-closely to the latest SQL and JDBC 4 standards.</p>
+closely to the latest SQL:2011 and JDBC 4.2 standards.</p>
 <div class="section_title"> </div>
 <p>A set of HTML, PDF and text documents covering different
 aspects of HSQLDB and some of its utilities.</p>
