--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ improvements over version 2.0. It offers many features and
 adheres closely to the latest SQL and JDBC 4.2 standards.</p>
 <p>This release should be used in preference to earlier 2.x releases, as it fixes a 
 number of bugs and regressions, as well as improving functionality and adding new features.</p>
-<p>The jar in this package is compatible with Java 8 and later. Version 2.3.5 jar has the same features as version 2.4.0 minus the java.time features and should be used with Java 6 and 7.
+<p>The jar in this package is compatible with Java 8 and later. Version 2.3.5 jar (separate download from the web site) has the same features as version 2.4.0 minus the java.time features and can be used with Java 6 and 7.
 <h4>SUPPORTWARE</h4>
 <p>The development and maintenance of&nbsp; HyperSQL has been possible
 because of financial contributions by business users. We need renewed
@@ -24,7 +24,7 @@ or use it in production, you are expected to subscribe to SupportWare at the app
 from <a href="http://hyperxtreme.co.uk/services.html">http://hyperxtreme.co.uk</a>. This service provides all the help needed to use or integrate HSQLDB with your application.</p>
 <h4>SCALABILITY UPGRADES</h4>
 <p>For applications that require more speed with very large data sets, or need to store more data in a memory database, the commercial product, HyperXtremeSQL is available
-from <a href="http://hyperxtreme.co.uk">http://hyperxtreme.co.uk</a>. This product is fully compatible with HSQLDB queries and JDBC calls. It also has
+from <a href="http://hyperxtreme.co.uk">http://hyperxtreme.co.uk</a>. This product is fully compatible with HSQLDB SQL queries and JDBC calls. It also has
 extensive SQL OLAP and procedural language features, together with extra crash-recovery and database management capabilities.</p>
 <h4>PACKAGE CONTENTS</h4>
 <p>This download contains the
