--- a/trunk/index.html
+++ b/trunk/index.html
@@ -12,7 +12,8 @@ improvements over version 2.0. It offers many features and
 adheres closely to the latest SQL and JDBC 4.2 standards.</p>
 <p>This release should be used in preference to earlier 2.x releases, as it fixes a 
 number of bugs and regressions, as well as improving functionality and adding new features.</p>
-<p>The jar in this package is compatible with Java 8 and later. Version 2.3.6 jar (separate download from the web site) has the same features as version 2.4.1 minus the java.time features and can be used with Java 6 and 7.
+<p>The jar in this package is compatible with Java 8 and later. It has been tested with JRE 8, JRE 9 and JRE 10 (early access). 
+Version 2.3.6 jar (separate download from the web site) has the same features as version 2.4.1 minus the java.time features and can be used with Java 6 and 7.
 <h4>SUPPORTWARE</h4>
 <p>The development and maintenance of&nbsp; HyperSQL has been possible
 because of financial contributions by business users. We need renewed
