--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <img style="width: 223px; height: 47px;" alt="HyperSQL logo" src="doc-src/images/hypersql_logo.png">
 <h3><br>
 </h3>
-<h3>HyperSQL version 2.5.0 Distribution</h3>
+<h3>HyperSQL version 2.5.1 Distribution</h3>
 <p>HSQLDB (HyperSQL Database) is a relational
-database management system written in Java. Now in its 19th year, HSQLDB version 2.5.0 is the result of 14 years development since version 1.8.0 and 9 years
+database management system written in Java. Now in its 19th year, HSQLDB version 2.5.1 is the result of 14 years development since version 1.8.0 and 9 years
 improvements over version 2.0. It offers many features and
 adheres closely to the latest SQL and JDBC 4.2 standards.</p>
 <p>This release should be used in preference to earlier 2.x releases, as it fixes a 
 number of bugs and regressions, as well as improving functionality and adding new features.</p>
-<p>The jar in this package is compatible with Java 8 and later. It has been tested with JRE 8, JRE 9 and JRE 10 (early access). 
-Version 2.3.7 jar (separate download from the web site) has the same features as version 2.5.0 minus the java.time features and can be used with Java 6 and 7.
+<p>The jar in this package is compatible with Java 8 and later. It has been tested with JRE 8, 9, 10, 11, 12 and 13. 
+Version 2.3.8 jar (separate download from the web site) has the same features as version 2.5.1 minus the java.time features and can be used with Java 6 and 7.
 <h4>SUPPORTWARE</h4>
 <p>The development and maintenance of&nbsp; HyperSQL has been possible
 because of financial contributions by business users. We need renewed
@@ -84,10 +84,10 @@ utilities
 for the engine and SqlTool</p>
 <h4>CHANGES</h4>
 <ul>
-<li>Versions 2.x have evolved over seven years since 2010. This version is the most stable and bug-free version in the 2.x series.</li>
+<li>Versions 2.x have evolved over nine years since 2010. This version is the most stable and bug-free version in the 2.x series.</li>
 <li>Compared to earlier versions, there are many new features and changes. Most
 of these do not affect compatibility.</li>
-<li>Differences are detailed in the Guide. The main differences in version 2.5.0
+<li>Differences are detailed in the Guide. The main differences in version 2.5.1
 are as follows:</li>
 <li>Transaction management has been improved to allow creation and alteration of database objects such as tables
 while other transactions are active. This applies to the default LOCKS transaction model.</li>
