--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </h3>
 <h3>HyperSQL version 2.5.1 Distribution</h3>
 <p>HSQLDB (HyperSQL Database) is a relational
-database management system written in Java. Now in its 19th year, HSQLDB version 2.5.1 is the result of 14 years development since version 1.8.0 and 9 years
+database management system written in Java. Now in its 20th year, HSQLDB version 2.5.1 is the result of 15 years development since version 1.8.0 and 10 years
 improvements over version 2.0. It offers many features and
 adheres closely to the latest SQL and JDBC 4.2 standards.</p>
 <p>This release should be used in preference to earlier 2.x releases, as it fixes a 
@@ -84,7 +84,7 @@ utilities
 for the engine and SqlTool</p>
 <h4>CHANGES</h4>
 <ul>
-<li>Versions 2.x have evolved over nine years since 2010. This version is the most stable and bug-free version in the 2.x series.</li>
+<li>Versions 2.x have evolved over ten years since 2010. This version is the most stable and bug-free version in the 2.x series.</li>
 <li>Compared to earlier versions, there are many new features and changes. Most
 of these do not affect compatibility.</li>
 <li>Differences are detailed in the Guide. The main differences in version 2.5.1
