--- a/trunk/index.html
+++ b/trunk/index.html
@@ -12,7 +12,7 @@ improvements over version 2.0. It offers many features and
 adheres closely to the latest SQL and JDBC 4.2 standards.</p>
 <p>This release should be used in preference to earlier 2.x releases, as it fixes a 
 number of bugs and regressions, as well as improving functionality and adding new features.</p>
-<p>The jar in this package is compatible with Java 8 and later. It has been tested with JRE 8, 9, 10, 11, 12 and 13. 
+<p>The jar in this package is compatible with Java 8 and later. It has been tested with JRE 8 to 14. 
 Version 2.3.8 jar (separate download from the web site) has the same features as version 2.5.1 minus the java.time features and can be used with Java 6 and 7.
 <h4>SUPPORTWARE</h4>
 <p>The development and maintenance of&nbsp; HyperSQL has been possible
