--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ improvements over version 2.0. It offers many features and
 adheres closely to the latest SQL and JDBC 4.2 standards.</p>
 <p>This release should be used in preference to earlier 2.x releases, as it fixes a 
 number of bugs and regressions, as well as improving functionality and adding new features.</p>
-<p>The main jars in this package are compatible with Java 8 and later. The Java module jars are compatible with Java 11 and later. The jars have been tested with JRE 8 to 15. 
+<p>The main jars in this package are Java module jars and compatible with Java 11 and later. The alternative jars are compatible with Java 8 and later. TheThe jars have been tested with JRE 8 to 15. 
 Version 2.3.9 jar (separate download from the web site) has the same features as version 2.6.0 minus the java.time features and can be used with Java 6 and 7.
 <h4>SUPPORTWARE</h4>
 <p>The development and maintenance of&nbsp; HyperSQL has been possible
