--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       src="doc-src/images/hypersql_logo.png">
     <h3><br>
     </h3>
-    <h3>HyperSQL version 2.7.0 Distribution<br>
+    <h3>HyperSQL version 2.7.1 Distribution<br>
     </h3>
     <p>HSQLDB (HyperSQL Database) is a relational
       database management system written in Java. Now in its 22nd year,
-      HSQLDB version 2.7.0 is the result of 12 years
+      HSQLDB version 2.7.1 is the result of 12 years
       improvements since version 2.0. It offers many features and
       adheres closely to the latest SQL and JDBC 4.2 standards.</p>
     <p>This release should be used in preference to earlier 2.x
@@ -22,8 +22,8 @@
     <p>The main jars in this package are Java module jars and compatible
       with Java 11 and later. The alternative jars are compatible with
       Java 8 and later. The jars have been tested with JRE 8, 11 and 17.
-      A eparate jar from the web site has the same functionality as 
-      version 2.7.0 minus the java.time features and  can be used with Java 6 and 7.
+      A separate jar from the web site has the same functionality as
+      version 2.7.1 minus the java.time features and  can be used with Java 6 and 7.
     </p>
     <h4>SUPPORTWARE</h4>
     <p>The development and maintenance of&nbsp; HyperSQL has been
@@ -116,7 +116,7 @@
       <li>Compared to earlier versions, there are many new features and
         changes. Most of these do not affect compatibility.</li>
       <li>Differences are detailed in the Guide. The main differences in
-        version 2.7.0 are as follows:</li>
+        version 2.7.1 are as follows:</li>
       <li>Transaction management has been improved to allow creation and
         alteration of database objects such as tables
         while other transactions are active. This applies to the default
