--- a/trunk/index.html
+++ b/trunk/index.html
@@ -9,11 +9,11 @@
       src="doc-src/images/hypersql_logo.png">
     <h3><br>
     </h3>
-    <h3>HyperSQL version 2.7.1 Distribution<br>
+    <h3>HyperSQL version 2.7.2 Distribution<br>
     </h3>
     <p>HSQLDB (HyperSQL Database) is a relational
-      database management system written in Java. Now in its 22nd year,
-      HSQLDB version 2.7.1 is the result of 12 years
+      database management system written in Java. Now in its 23rd year,
+      HSQLDB version 2.7.2 is the result of 12 years
       improvements since version 2.0. It offers many features and
       adheres closely to the latest SQL and JDBC 4.2 standards.</p>
     <p>This release should be used in preference to earlier 2.x
@@ -23,7 +23,7 @@
       with Java 11 and later. The alternative jars are compatible with
       Java 8 and later. The jars have been tested with JRE 8, 11 and 17.
       A separate jar from the web site has the same functionality as
-      version 2.7.1 minus the java.time features and  can be used with Java 6 and 7.
+      version 2.7.2 minus the java.time features and  can be used with Java 6 and 7.
     </p>
     <h4>SUPPORTWARE</h4>
     <p>The development and maintenance of&nbsp; HyperSQL has been
@@ -110,13 +110,12 @@
     <p>All source code for documentation is in this directory. </p>
     <h4>CHANGES</h4>
     <ul>
-      <li>Versions 2.x have evolved over ten years since 2010. This
-        version is the most stable and bug-free version in the 2.x
-        series.</li>
+      <li>Versions 2.x have evolved over twelve years since 2010. This
+        version is the most stable version in the 2.x series.</li>
       <li>Compared to earlier versions, there are many new features and
         changes. Most of these do not affect compatibility.</li>
       <li>Differences are detailed in the Guide. The main differences in
-        version 2.7.1 are as follows:</li>
+        version 2.7.2 are as follows:</li>
       <li>Transaction management has been improved to allow creation and
         alteration of database objects such as tables
         while other transactions are active. This applies to the default
