documentation updates - update version to 2.7.4
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@6787 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       src="doc-src/images/hypersql_logo.png">
     <h3><br>
     </h3>
-    <h3>HyperSQL version 2.7.3 Distribution<br>
+    <h3>HyperSQL version 2.7.4 Distribution<br>
     </h3>
     <p>HSQLDB (HyperSQL Database) is a relational
       database management system written in Java. Now in its 24th year,
-      HSQLDB version 2.7.3 is the result of 13 years
+      HSQLDB version 2.7.4 is the result of 14 years
       improvements since version 2.0. It offers many features and
       adheres closely to the latest SQL and JDBC 4.3 standards.</p>
     <p>This release should be used in preference to earlier 2.x
@@ -113,7 +113,7 @@
       <li>Compared to earlier versions, there are many new features and
         changes. Most of these do not affect compatibility.</li>
       <li>Differences are detailed in the Guide. The main differences in
-        version 2.7.3 are as follows:</li>
+        version 2.7.4 are as follows:</li>
       <li>Transaction management has been improved to allow creation and
         alteration of database objects such as tables
         while other transactions are active. This applies to the default
@@ -121,6 +121,8 @@
       <li>Support for Java 8 java.time package classes has been added to
         JDBC classes. This allows accessing TIME ZONE information in
         timestamps and all INTERVAL values.</li>
+	  <li>Several new functions have been added, including JSON and 
+	    number formatting.</li>		
       <li>Support for Java modules with Java 11 and above.</li>
     </ul>
     <h4>UPDATES</h4>
@@ -135,13 +137,12 @@
       in various forms, including user forums. Support is given to open
       source developers for using HSQLDB in their products.</p>
     <h4>NOTE</h4>
-    The highly configurable java source code formatter <a
+    <p>The highly configurable java source code formatter <a
       href="http://jindent.com">Jindent</a> is used to format the HSQLDB
-    source code.
+      source code.</p>
     <p>This Software is developed and published by the HSQL Development
       Group</p>
-    <p>Fred Toussi (fredt (at)
-      users.sourceforge.net)<br>
+    <p>Fred Toussi (fredt (at) users.sourceforge.net)<br>
       Blaine Simpson (blaine dot simpson (at) admc dot com)</p>
     <p><a href="http://hsqldb.org">http://hsqldb.org</a>&nbsp;</p>
   </body>
