--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         version is the most stable version in the 2.x series.</li>
       <li>Compared to earlier versions, there are many new features and
         changes. Most of these do not affect compatibility.</li>
-      <li>Differences are detailed in the Guide. The main differences in
+      <li>Differences are detailed in the Guide. Some of the differences in
         version 2.7.4 are as follows:</li>
       <li>Transaction management has been improved to allow creation and
         alteration of database objects such as tables
